--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 
 # Site settings
 title: LightXlab
+theme: solid
 description: "LightXlab is an optics simulation program simulating combinations of plane mirror, spherical mirror and parabolics mirror developed by Satvik Ramaprasad. "
 analytics: UA-61876800-1 #Google analytics code in the format XX-nnnnnnnn-n
 baseurl: "/LightXlab" #important: start with /
